--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,3 +1,3 @@
 <h2> Your coach</h2>
 <p><%= @answer %></p>
-<%# <%link_to "ask", action "/ask" %> %>
+<%= link_to "Ask a new question", ask_path %>
